# hare

./: CMakeCompilers.txt  CMakeLists.txt  README.md
cmake/: FindGMP.cmake  FindMPFR.cmake
include/: behz.hpp  factory.hpp  hare.hpp  hpr_hps.hpp  hpr_rns.hpp  hps.hpp  params_gamma_t.hpp  tmp.hpp
include/hpr/: be_hpr.hpp  common_hpr.hpp  hpr.hpp
include/rns/: common_rns.hpp  rns.hpp
nfl/: CMakeLists.txt  README.md
nfl/include/: nfl.hpp
nfl/include/nfl/: algos.hpp  aligned_allocator.hpp  arch.hpp  core.hpp  debug.hpp  gmp.hpp  meta.hpp  ops.hpp  params.hpp  permut.hpp  poly.hpp  poly_p.hpp
nfl/include/nfl/arch/: common.hpp
nfl/include/nfl/opt/: ops.hpp
nfl/include/nfl/primes/: 46-bits.hpp  47-bits.hpp  48-bits.hpp  49-bits.hpp  50-bits.hpp  51-bits.hpp  52-bits.hpp  53-bits.hpp  54-bits.hpp  55-bits.hpp  56-bits.hpp  57-bits.hpp  58-bits.hpp  59-bits.hpp  60-bits.hpp  61-bits.hpp  62-bits.hpp
nfl/include/nfl/prng/: FastGaussianNoise.hpp  crypto_stream_salsa20.h  fastrandombytes.h  randombytes.h
nfl/lib/prng/: fastrandombytes.cpp  nfl_crypto_stream_salsa20_amd64_xmm6.s  randombytes.cpp
src/: main2.cpp
